--- a/style.css
+++ b/style.css
@@ -1,74 +1,107 @@
-body{
+body {
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.509);
     text-align: center;
     text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    /* For better compatibility across browsers */
+    background: -webkit-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    background: -moz-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    background: -o-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    background: -ms-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
 }
-.gridcon{
+
+.gridcon {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     grid-auto-columns: auto;
     grid-gap: 6px;
 }
-.gridcon2{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-}
-img{
-    border: 2px  solid rgb(0, 0, 0);
+
+img {
+    border: 2px solid rgb(0, 0, 0);
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.img:hover{
+
+img:hover {
     color: #111;
     background: greenyellow;
     box-shadow: 0px 0px 100px greenyellow;
 }
-.pic{
+
+.pic {
     grid-row: span 2 / auto;
     grid-column: span 2 / auto;
 }
-.pic2{
+
+.pic2 {
     grid-column: span 2 / auto;
 }
 
-#foot{
-    margin-top: 1px;
-    background-color:  rgb(40, 47, 109);
-    width: 100.5%;
-    text-align: center;
-    color: rgb(248, 255, 247);
-    font-family: Quicksand;
-    font-size: 40px;
+br {
+    margin-bottom: 150px;
 }
-.grid-item {
-    background-color:  rgb(40, 47, 109);
-    padding: 10px;
-    padding-left: 20px;
-    margin-left: 20px;
-    margin-right: 40px;
-    color: rgb(241, 241, 241);
-    text-align: center;
-    font-size: 18px;
-    border-color: transparent;
+
+@keyframes example {
+    from {
+        background-color: red;
+    }
+
+    to {
+        background-color: yellow;
+    }
 }
-.white{
-    color:rgb(255, 0, 119);
-    text-decoration: none;  
-    font-weight: 300;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 15px;
+
+/* The element to apply the animation to */
+h1
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 50px;
 }
-:hover.white{
-    color: rgb(255, 255, 255);
-    text-decoration: none;  
-    text-shadow: 3px 3px 20px#200303;
-    font-weight: 400;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 22px;
-    transition-duration: 1s;
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
+
+
+body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(270deg, #f58529, #dd2a7b, #8134af, #515bd4);
+    background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
