--- a/nstyle.css
+++ b/nstyle.css
@@ -104,4 +104,23 @@ body {
       background-position: 0% 50%;
     }
   }
-  
+
+@media (max-width: 768px) {
+  h1 {
+      font-size: 30px;
+  }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 480px) {
+  h1 {
+      font-size: 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  h1 {
+      font-size: 40px;
+  }
+}
+
