--- a/nstyle.css
+++ b/nstyle.css
@@ -105,5 +105,24 @@ body {
     }
   }
 
+@media (max-width: 768px) {
+  h1 {
+      font-size: 30px;
+  }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 480px) {
+  h1 {
+      font-size: 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  h1 {
+      font-size: 40px;
+  }
+}
+
 
 
