--- a/nstyle.css
+++ b/nstyle.css
@@ -1,70 +1,51 @@
 body {
-    align-items: center;
-    text-align: center;
-    text-decoration: none;
-    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    /* For better compatibility across browsers */
-    background: -webkit-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
-    background: -moz-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
-    background: -o-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
-    background: -ms-linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
 }
 
 .gridcon {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
-    grid-auto-columns: auto;
-    grid-gap: 6px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  grid-auto-columns: auto;
+  grid-gap: 6px;
 }
 
 img {
-    border: 2px solid rgb(0, 0, 0);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  border: 2px solid rgb(0, 0, 0);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 img:hover {
-    color: #111;
-    background: greenyellow;
-    box-shadow: 0px 0px 100px greenyellow;
+  color: #111;
+  background: greenyellow;
+  box-shadow: 0px 0px 100px greenyellow;
 }
 
 .pic {
-    grid-row: span 2 / auto;
-    grid-column: span 2 / auto;
+  grid-row: span 2 / auto;
+  grid-column: span 2 / auto;
 }
 
 .pic2 {
-    grid-column: span 2 / auto;
+  grid-column: span 2 / auto;
 }
 
 br {
-    margin-bottom: 150px;
-}
-
-@keyframes example {
-    from {
-        background-color: red;
-    }
-
-    to {
-        background-color: yellow;
-    }
+  margin-bottom: 150px;
 }
 
 /* The element to apply the animation to */
-h1
-{
-   text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
-  );
+h1 {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg,
+      #231557 0%,
+      #44107a 29%,
+      #ff1361 67%,
+      #fff800 100%);
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -75,7 +56,26 @@ h1
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
   display: inline-block;
-      font-size: 50px;
+  font-size: 50px;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
+/* Media query for mobile devices */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 40px;
+  }
 }
 
 @keyframes textclip {
@@ -84,45 +84,20 @@ h1
   }
 }
 
+@keyframes travelingLines {
+  0% {
+      background-color: #ee790c;
+  }
+  50% {
+      background-color: #3f24db;
+  }
+  100% {
+      background-color: #dceaa8; /* Same as the first color */
+  }
+}
 
 body {
-    margin: 0;
-    height: 100vh;
-    background: linear-gradient(270deg, #f58529, #dd2a7b, #8134af, #515bd4);
-    background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
-  }
-  
-  @keyframes gradientAnimation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-
-@media (max-width: 768px) {
-  h1 {
-      font-size: 30px;
-  }
+  background-color: #dceaa8;
+  animation: travelingLines 10s linear infinite;
 }
-
-/* Media query for mobile devices */
-@media (max-width: 480px) {
-  h1 {
-      font-size: 20px;
-  }
-}
-
-@media (max-width: 1024px) {
-  h1 {
-      font-size: 40px;
-  }
-}
-
-
 
